# hydrostructai.github.io

./: .cursorignore  .cursorrules  BLOG_UPDATE_VISUAL_SUMMARY.md  CHANGELOG.md  CNAME  CURSOR-PROMPT1.md  DEPLOYMENT_REFACTOR_SUMMARY.md  FINAL_REFACTOR_SUMMARY.md  FRONTEND_REFACTOR_COMPLETE.md  GIAO_DIEN_SHORTCOL_HUONG_DAN_TUNG_BUOC.md  GUIDE-CURSOR-PROMPT.MD  Gemfile  PEP3 THANG DANH GIA PHAT TRIEN.html  Prompt Cursor for output result.md  Prompt css system.md  QUICK_START_GUIDE.md  README.md  REFACTORING_SUMMARY.md  TASK_APPLY_MODERN_POST_GRID_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  TASK_OPTIMIZE_POST_LAYOUT_V3_SUMMARY.md  TASK_REFACTOR_HYDRAULIC_SPILLWAY_UI_VIZ_SUMMARY.md  TASK_SHORTCOL_UI_MODERNIZATION_SUMMARY.md  Thuy luc doc nuoc.xls  Tinh doc nuoc-HQD5-23.9.25-V2.xls  VISUALIZATION_IMPLEMENTATION_SUMMARY.md  WASM_REFACTOR_SUMMARY.md  YYYY-MM-DD-ten-bai-viet-chuan-seo.md  _config.yml  about.md  apps.md  cursor_prompts.yml  hypocycloid.html  index.html  index.md  prompt structure main page.md  prompt-fix-main-menu.md  tags.md  taylorseries.html  taylorseriessinx.html  (+1 more)
apps/shortcol2025-core/: CMakeLists.txt  ShortCol 3D Biaxial.html  index.html  index_sav.html  input1.txt  lib_structure.txt
apps/shortcol2025-core/include/analysis/: ColumnAnalyzer.h
apps/shortcol2025-core/include/codes/: ACI318_25.h  DesignStandard.h  Eurocode2.h  Material.h
apps/shortcol2025-core/include/core/: Section.h
apps/shortcol2025-core/include/io/: InputManager.h
apps/shortcol2025-core/include/math/: NumericalSolver.h
apps/shortcol2025-core/src/analysis/: ColumnAnalyzer.cpp
(+342 files in other folders)
